--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "laputa",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -20,9 +20,15 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "@fortawesome/angular-fontawesome": "^0.3.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.8",
+    "@fortawesome/free-brands-svg-icons": "^5.5.0",
+    "@fortawesome/free-solid-svg-icons": "^5.5.0",
     "contentful": "^7.0.5",
     "core-js": "^2.5.4",
+    "normalize.css": "^8.0.1",
     "rxjs": "~6.3.3",
+    "viser-ng": "^2.4.2",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
