--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@fortawesome/angular-fontawesome": "^0.3.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.8",
     "@fortawesome/free-brands-svg-icons": "^5.5.0",
+    "@fortawesome/free-regular-svg-icons": "^5.5.0",
     "@fortawesome/free-solid-svg-icons": "^5.5.0",
     "contentful": "^7.0.5",
     "core-js": "^2.5.4",
     "load-awesome": "^1.1.0",
+    "lodash": "^4.17.11",
     "normalize.css": "^8.0.1",
     "rxjs": "~6.3.3",
     "viser-ng": "^2.4.2",
