--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.0.0",
+    "@angular/animations": "^7.0.4",
+    "@angular/cdk": "^7.1.1",
     "@angular/common": "~7.0.0",
     "@angular/compiler": "~7.0.0",
     "@angular/core": "~7.0.0",
@@ -25,8 +26,11 @@
     "@fortawesome/free-brands-svg-icons": "^5.5.0",
     "@fortawesome/free-regular-svg-icons": "^5.5.0",
     "@fortawesome/free-solid-svg-icons": "^5.5.0",
+    "@ngx-gallery/core": "^4.0.1",
+    "@ngx-gallery/lightbox": "^4.0.1",
     "contentful": "^7.0.5",
     "core-js": "^2.5.4",
+    "hammerjs": "^2.0.8",
     "load-awesome": "^1.1.0",
     "lodash": "^4.17.11",
     "normalize.css": "^8.0.1",
