--- a/package.json
+++ b/package.json
@@ -11,41 +11,41 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.0.4",
+    "@angular/animations": "^7.1.2",
     "@angular/cdk": "^7.1.1",
-    "@angular/common": "~7.0.0",
-    "@angular/compiler": "~7.0.0",
-    "@angular/core": "~7.0.0",
-    "@angular/forms": "~7.0.0",
-    "@angular/http": "~7.0.0",
-    "@angular/platform-browser": "~7.0.0",
-    "@angular/platform-browser-dynamic": "~7.0.0",
-    "@angular/router": "~7.0.0",
+    "@angular/common": "~7.1.2",
+    "@angular/compiler": "~7.1.2",
+    "@angular/core": "~7.1.2",
+    "@angular/forms": "~7.1.2",
+    "@angular/http": "~7.1.2",
+    "@angular/platform-browser": "~7.1.2",
+    "@angular/platform-browser-dynamic": "~7.1.2",
+    "@angular/router": "~7.1.2",
     "@fortawesome/angular-fontawesome": "^0.3.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.8",
-    "@fortawesome/free-brands-svg-icons": "^5.5.0",
-    "@fortawesome/free-regular-svg-icons": "^5.5.0",
-    "@fortawesome/free-solid-svg-icons": "^5.5.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.9",
+    "@fortawesome/free-brands-svg-icons": "^5.6.0",
+    "@fortawesome/free-regular-svg-icons": "^5.6.0",
+    "@fortawesome/free-solid-svg-icons": "^5.6.0",
     "@ngx-gallery/core": "^4.0.1",
     "@ngx-gallery/lightbox": "^4.0.1",
     "contentful": "^7.0.5",
-    "core-js": "^2.5.4",
+    "core-js": "^2.6.0",
     "hammerjs": "^2.0.8",
     "load-awesome": "^1.1.0",
     "lodash": "^4.17.11",
     "normalize.css": "^8.0.1",
     "rxjs": "~6.3.3",
-    "viser-ng": "^2.4.2",
+    "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.10.0",
-    "@angular/cli": "~7.0.4",
-    "@angular/compiler-cli": "~7.0.0",
-    "@angular/language-service": "~7.0.0",
-    "@types/node": "~8.9.4",
-    "@types/jasmine": "~2.8.8",
+    "@angular-devkit/build-angular": "^0.10.7",
+    "@angular/cli": "~7.1.2",
+    "@angular/compiler-cli": "~7.1.2",
+    "@angular/language-service": "~7.1.2",
+    "@types/jasmine": "^2.8.12",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
