--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.6.0",
     "@ngx-gallery/core": "^4.0.1",
     "@ngx-gallery/lightbox": "^4.0.1",
+    "@swimlane/ngx-charts": "^10.0.0",
     "breakpoint-sass": "^2.7.1",
     "contentful": "^7.0.5",
     "core-js": "^2.6.0",
