--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "laputa",
   "version": "1.0.0",
+  "engines": {
+    "node": ">= 10.0.0"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -11,24 +14,23 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.2",
-    "@angular/cdk": "^7.3.0",
-    "@angular/common": "~7.2.2",
-    "@angular/compiler": "~7.2.2",
-    "@angular/core": "~7.2.2",
-    "@angular/forms": "~7.2.2",
-    "@angular/http": "~7.2.2",
-    "@angular/platform-browser": "~7.2.2",
-    "@angular/platform-browser-dynamic": "~7.2.2",
-    "@angular/router": "~7.2.2",
-    "@fortawesome/angular-fontawesome": "^0.3.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.13",
+    "@angular/animations": "^8.2.8",
+    "@angular/cdk": "^8.2.1",
+    "@angular/common": "~8.2.8",
+    "@angular/compiler": "~8.2.8",
+    "@angular/core": "~8.2.8",
+    "@angular/forms": "~8.2.8",
+    "@angular/platform-browser": "~8.2.8",
+    "@angular/platform-browser-dynamic": "~8.2.8",
+    "@angular/router": "~8.2.8",
+    "@fortawesome/angular-fontawesome": "^0.5.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-brands-svg-icons": "^5.7.0",
-    "@fortawesome/free-regular-svg-icons": "^5.7.0",
-    "@fortawesome/free-solid-svg-icons": "^5.7.0",
-    "@ngx-gallery/core": "^4.0.1",
-    "@ngx-gallery/lightbox": "^4.0.1",
-    "@swimlane/ngx-charts": "^10.0.0",
+    "@fortawesome/free-regular-svg-icons": "^5.11.2",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@ngx-gallery/core": "^4.0.3",
+    "@ngx-gallery/lightbox": "^4.0.3",
+    "@swimlane/ngx-charts": "^12.0.1",
     "breakpoint-sass": "^2.7.1",
     "contentful": "^7.1.0",
     "core-js": "^2.6.3",
@@ -36,19 +38,19 @@
     "load-awesome": "^1.1.0",
     "lodash": "^4.17.11",
     "normalize.css": "^8.0.1",
-    "rxjs": "~6.4.0",
+    "rxjs": "~6.5.3",
     "tslib": "^1.9.0",
-    "zone.js": "~0.8.29"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.12.3",
-    "@angular/cli": "~7.2.3",
-    "@angular/compiler-cli": "~7.2.2",
-    "@angular/language-service": "~7.2.2",
+    "@angular-devkit/build-angular": "~0.803.6",
+    "@angular/cli": "~8.3.6",
+    "@angular/compiler-cli": "~8.2.8",
+    "@angular/language-service": "~8.2.8",
     "@types/jasmine": "^3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^10.12.19",
-    "codelyzer": "~4.5.0",
+    "codelyzer": "^5.0.1",
     "jasmine-core": "^3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.0.0",
@@ -60,6 +62,6 @@
     "protractor": "^5.4.2",
     "ts-node": "^8.0.2",
     "tslint": "^5.12.1",
-    "typescript": "~3.2.4"
+    "typescript": "^3.5.3"
   }
 }
