--- a/angular.json
+++ b/angular.json
@@ -10,13 +10,14 @@
       "prefix": "laputa",
       "schematics": {
         "@schematics/angular:component": {
-          "styleext": "scss"
+          "style": "scss"
         }
       },
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "aot": true,
             "outputPath": "dist/laputa",
             "index": "src/index.html",
             "main": "src/main.ts",
@@ -31,7 +32,9 @@
               "src/styles.scss"
             ],
             "stylePreprocessorOptions": {
-              "includePaths": [ "src/styles" ]
+              "includePaths": [
+                "src/styles"
+              ]
             },
             "scripts": []
           },
@@ -57,6 +60,10 @@
                   "type": "initial",
                   "maximumWarning": "2mb",
                   "maximumError": "5mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb"
                 }
               ]
             }
@@ -139,5 +146,8 @@
       }
     }
   },
-  "defaultProject": "laputa"
+  "defaultProject": "laputa",
+  "cli": {
+    "analytics": "6119c68d-670e-4af7-8a46-e79fe5b81845"
+  }
 }
