--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^12.2.9",
-    "@angular/cdk": "^9.2.4",
+    "@angular/cdk": "^12.2.9",
     "@angular/common": "~12.2.9",
     "@angular/compiler": "~12.2.9",
     "@angular/core": "~12.2.9",
@@ -23,14 +23,14 @@
     "@angular/platform-browser": "~12.2.9",
     "@angular/platform-browser-dynamic": "~12.2.9",
     "@angular/router": "~12.2.9",
-    "@fortawesome/angular-fontawesome": "^0.6.1",
+    "@fortawesome/angular-fontawesome": "^0.9.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.29",
     "@fortawesome/free-brands-svg-icons": "^5.13.1",
     "@fortawesome/free-regular-svg-icons": "^5.13.1",
     "@fortawesome/free-solid-svg-icons": "^5.13.1",
     "@ngx-gallery/core": "^4.0.3",
     "@ngx-gallery/lightbox": "^4.0.3",
-    "@swimlane/ngx-charts": "^14.0.0",
+    "@swimlane/ngx-charts": "^19.1.0",
     "breakpoint-sass": "^2.7.1",
     "contentful": "^7.1.0",
     "core-js": "^2.6.3",
@@ -50,8 +50,9 @@
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
+    "ajv": "^6.9.1",
     "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
+    "jasmine-core": "^3.9.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.4",
     "karma-chrome-launcher": "~3.1.0",
@@ -62,6 +63,6 @@
     "protractor": "~7.0.0",
     "ts-node": "^8.0.2",
     "tslint": "~6.1.0",
-    "typescript": "^4.0.8"
+    "typescript": "^4.2.3"
   }
 }
