--- a/package.json
+++ b/package.json
@@ -28,15 +28,14 @@
     "@fortawesome/free-brands-svg-icons": "^5.13.1",
     "@fortawesome/free-regular-svg-icons": "^5.13.1",
     "@fortawesome/free-solid-svg-icons": "^5.13.1",
-    "@ngx-gallery/core": "^4.0.3",
-    "@ngx-gallery/lightbox": "^4.0.3",
-    "@swimlane/ngx-charts": "^19.1.0",
+    "@swimlane/ngx-charts": "20.1.0",
     "breakpoint-sass": "^2.7.1",
     "contentful": "^7.1.0",
     "core-js": "^2.6.3",
     "hammerjs": "^2.0.8",
     "load-awesome": "^1.1.0",
     "lodash": "^4.17.21",
+    "ng-gallery": "^6.0.1",
     "normalize.css": "^8.0.1",
     "rxjs": "~6.5.3",
     "tslib": "^2.0.0",
@@ -51,7 +50,6 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "ajv": "^6.9.1",
-    "codelyzer": "^6.0.0",
     "jasmine-core": "^3.9.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.4",
@@ -63,6 +61,6 @@
     "protractor": "~7.0.0",
     "ts-node": "^8.0.2",
     "tslint": "~6.1.0",
-    "typescript": "^4.6.4"
+    "typescript": "4.6.4"
   }
 }
