--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^13.3.11",
-    "@angular/cdk": "^12.2.9",
+    "@angular/cdk": "~13.3.9",
     "@angular/common": "~13.3.11",
     "@angular/compiler": "~13.3.11",
     "@angular/core": "~13.3.11",
@@ -23,7 +23,7 @@
     "@angular/platform-browser": "~13.3.11",
     "@angular/platform-browser-dynamic": "~13.3.11",
     "@angular/router": "~13.3.11",
-    "@fortawesome/angular-fontawesome": "^0.9.0",
+    "@fortawesome/angular-fontawesome": "0.10.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.29",
     "@fortawesome/free-brands-svg-icons": "^5.13.1",
     "@fortawesome/free-regular-svg-icons": "^5.13.1",
